<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="Alex">Alex Music</string>
    <string name="Blow">起风了</string>
    <string name="Aua">卖辣椒也用券</string>
    <string name="one">0.25</string>
    <string name="two">-0.25</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_local">Local Activity</string>
    <string name="title_activity_recent">Recent Activity</string>
    <string name="title_activity_favorite">Favorite Activity</string>
    <string name="local_music">本地音乐</string>

</resources>