<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alex"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blow"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/TextSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aua"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/music"
        app:layout_constraintTop_toBottomOf="@id/TextSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <SeekBar
        android:id="@+id/PlayLine"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <TextView
        android:id="@+id/TextStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textColor="#FFECB3"
        app:layout_constraintTop_toBottomOf="@id/PlayLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/TextEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textColor="#FFECB3"
        app:layout_constraintTop_toBottomOf="@id/PlayLine"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/baseline_play_circle_24"
        android:onClick="PlayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextEnd" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_favorite_border_24"
        app:layout_constraintTop_toBottomOf="@id/play"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_error_24"
        app:layout_constraintTop_toBottomOf="@id/play"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"/>

    <SeekBar
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:min="0"
        android:rotation="270"
        android:thumb="@drawable/seekbar_thumb"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/img"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.18"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

